adding java 21  features.